Bug 1932840: Ensure padding inflation does not cause block scroll in single-line input elements. r=layout-reviewers,emilio a=pascalc

These elements can't be scrolled block-direction by user anyway. It can be
programatically moved, but other browsers don't support that (See bug 1933477).
This also preserve our heuristics for finding user-scrollable elements.

Differential Revision: https://phabricator.services.mozilla.com/D230277